Add endpoint to update user_movie
